--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="more_options">more</string>
     <string name="todo_2">logo</string>
     <string name="back">back</string>
+    <string name="back_button_desc">back</string>
 </resources>
